# havok_class_info_gen

./: .gitignore  Cargo.toml  README.md  cspell.jsonc  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: lint-and-test.yaml  release-cli.yaml  release-gui.yaml
app_cli/: Cargo.toml
app_cli/src/: main.rs
app_core/: Cargo.toml
app_core/src/: app.rs  error.rs  lib.rs
app_core/src/hkx/: hkb_behavior_graph_string_data.rs
crates/hkx-serde/: Cargo.toml
crates/hkx-serde/src/: flag_values.rs  lib.rs
crates/hkx-serde/src/bytes/: hkx_header.rs
crates/hkx-serde/src/classes/: hkb_behavior_graph_string_data.rs  hkb_variable_value.rs  hkb_variable_value_set.rs  mod.rs  root.rs
crates/hkx-serde/src/de/: array.rs  class_pointer_c_style_array.rs  finder.rs  mod.rs  primitive.rs
crates/hkx-serde/src/generators/rust/: cpp_type_parser.rs  generate_code.rs
crates/hkx-serde/src/havok_types/: matrix3.rs  matrix4.rs  mod.rs  primitive.rs  qs_transform.rs  quaternion.rs  transform.rs  vector3.rs  vector4.rs
crates/hkx-serde/src/havok_types/array/: hk_array.rs  mod.rs  vector4.rs
crates/hkx-serde/src/havok_types/hk_array/: hk_array_class.rs  hk_array_ref.rs  hk_array_vector.rs  mod.rs
crates/hkx-serde/src/helpers/: mod.rs  serde_helper.rs  str_ext.rs
crates/hkx_class_generator/: Cargo.toml
crates/hkx_class_generator/assets/: readme.md
crates/hkx_class_generator/src/: class_map.rs  lib.rs  reflection_generator.rs
crates/hkx_class_generator/src/cpp_info/: class.rs  flag_values.rs  mod.rs  signature.rs  type_kind.rs
crates/hkx_class_generator/src/cpp_type_parser/: cpp_type_parser_for_struct.rs  cpp_type_parser_for_xml.rs
crates/hkx_class_generator/src/generators/: all_class.rs
crates/hkx_class_generator/src/generators/one_class/one_struct/: impl_bytes_deserialize.rs
crates/hkx_class_generator/src/hkx2lib_parser/: parse_txt.rs
crates/hkx_class_generator/src/hkxcmd_parser/: parse_rpt.rs
crates/hkx_class_generator/src/parser/: hkx2lib.rs  hkxcmd.rs  mod.rs
crates/hkx_class_generator/src/reflection_generator/: generate_offset.rs
crates/hkx_serde/: Cargo.toml
crates/hkx_serde/src/: error.rs
crates/hkx_serde/src/bytes/: deserializer.rs
crates/hkx_serde/src/classes/tests/: root.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: form.tsx  navigation.tsx
frontend/src/components/buttons/: exec_btn.tsx  index.ts
frontend/src/components/lists/: index.ts
frontend/src/components/notifications/: index.ts
frontend/src/components/pages/: app.tsx  settings.tsx
frontend/src/components/providers/: theme.tsx
frontend/src/hooks/: index.ts
frontend/src/tauri_cmd/: index.ts
frontend/src/utils/: selector.ts
locales/: en-US.json  ja-JP.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  logging.rs  main.rs  runner.rs
tests/: test.xml  test1.xml  test2.xml
xtask/: Cargo.toml
xtask/src/: main.rs
