[workspace.package]
authors = ["SARDONYX"]
version = "0.1.0"
license = "MIT or Apache-2.0"
description = ""
repository = "https://github.com/SARDONYX-sard/havok_class_info_gen" # Without it, the CLI CI build will error

[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/hkx_class_generator"]
resolver = "2"

[workspace.dependencies]
bitflags = "2.9.0"
convert_case = "0.8.0"
indexmap = "2.8.0"
jwalk = { version = "0.8" }
nom = "7.1.3"
num-derive = "0.4"
num-traits = "0.2"
parse-display = "0.10.0"
parse_int = { version = "0.6" }
serde = { version = "1.0.219", features = ["derive"] } # Implement (De)Serializer
serde_with = { version = "3.12.0" }
serde_json = { version = "1.0.140" }
snafu = { version = "0.8.5" }
topo_sort = "0.4.0"
tracing = "0.1.41"                                    # Logger

# dev dependencies
pretty_assertions = { version = "1.4.1" }
