[package]
name = "app_cli"
version.workspace = true
description = ""
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "app_cli"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.4", features = ["derive"] } # For CLI
app_core = { path = "../app_core" }
tokio = { version = "1.33.0", features = [
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.40" # Logger
tracing-subscriber = "0.3.17"

[dev-dependencies]
pretty_assertions = "1.4.0"
