[package]
name = "xtask"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true


[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = {workspace = true , features = ["derive"] }
serde_json = {workspace=  true }
snafu = { workspace = true }                         # To define error types.
zip-extract = { version = "0.2.1" }

[dev-dependencies]
pretty_assertions = { workspace = true }
