[package]
name = "hkx_class_generator"
edition = "2021"
authors.workspace = true
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
convert_case = "0.8.0"
indexmap = "2.2"
jwalk = { version = "0.8" }
nom = "7.1.3"
num-derive = "0.4"
num-traits = "0.2"
parse-display = "0.10.0"
parse_int = { version = "0.6" }
serde = { version = "1.0", features = ["derive"] } # Implement (De)Serializer
serde_with = { version = "3.12.0" }
serde_json = { version = "1.0.116" }
snafu = { version = "0.8.5" }
topo_sort = "0.4.0"
tracing = "0.1"                                    # Logger

[dev-dependencies]
quick_tracing = { version = "0.1.5", features = ["derive"] }
pretty_assertions = "1.4"

[features]
# default = ["nemesis"] # To debug

# For Nemesis json
# This can be done with pointers or u8... =u64, i8... =i64 to process variable string references,
# which means that a lifetime annotation is generated.
nemesis = []
